<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintWidth_percent="0.25"
            android:layout_gravity="center"
            android:src="@drawable/ic_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/rounder_purple"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/txt_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/rounded_orange"
                tools:ignore="VectorDrawableCompat" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_txt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/form_username"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/edit_txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_password"
                android:ems="10"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/edit_box_rememberMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remember_me" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="LOG IN"
                android:layout_marginTop="10dp"
                android:background="@color/colorButton"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autoLink="web"
                android:textAlignment="center"
                android:onClick="perform_forgotPassword"
                android:text="@string/forgot_password"
                android:gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>