<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgot.ForgotPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintWidth_percent="0.25"
        android:layout_gravity="center"
        android:src="@drawable/ic_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/rounder_purple"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/txt_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/rounded_orange"
            tools:ignore="VectorDrawableCompat" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_title_forgot_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_forgot_pass"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/txt_subtilte_forgot_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/subtitle_forgot_pass"
                android:gravity="center_horizontal" />

            <EditText
                android:id="@+id/edit_txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/form_email"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorButton"
                android:textColor="@android:color/white"
                android:text="Reset Password" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>